# max-thirdParty_externals

./: .gitignore  CMakeLists.txt  README.md  package-info.json.in
.github/workflows/: macos.yml  main.yml
docs/: example.maxref
help/: 2up_svf~.maxhelp  analyzer~.maxhelp  atari2600~.maxhelp  bob~.maxhelp  cverb~.maxhelp  fluidsynth~.maxhelp  gigaverb~.maxhelp  rufus~.maxhelp  s2m.wacom.maxhelp  slice~.maxhelp  vinylcontrol2~.maxhelp  vinylcontrol~.maxhelp
patchers/: cellsound.maxpat  unit.maxpat
source/projects/2up_svf_tilde/: 2up_svf~.c  CMakeLists.txt  README.md
source/projects/analyzer_tilde/: CMakeLists.txt  analyzer_tilde.c
source/projects/atari2600_tilde/: atari2600_tilde.c
source/projects/bob_tilde/: CMakeLists.txt  README.md  bob_tilde.c
source/projects/ca1s/: CMakeLists.txt  ca1s.c
source/projects/cverb_tilde/: cverb_tilde.c  cverb~ORIGINAL.c
source/projects/fluidsynth_tilde/: CMakeLists.txt  README.txt  fluidmax.c
source/projects/fluidsynth_tilde/src/: fluid_chan.h  fluid_settings.c  fluid_synth.c  fluid_synth.h  fluid_sys.c  fluid_sys.h  fluid_voice.c  fluidmaxversion.h  fluidsynth.h  fluidsynth_priv.h
source/projects/fluidsynth_tilde/src/fluidsynth/: midi.h
source/projects/freeverb_tilde/: CMakeLists.txt  README.md  freeverb_tilde.c
source/projects/gigaverb_tilde/: CMakeLists.txt  README.md  gverbdsp.c  gverbdsp.h  gverb~.c  gverb~.h
source/projects/rufus_tilde/: CMakeLists.txt  rufus_tilde.c
source/projects/s2m.wacom/: CMakeLists.txt  s2m.wacom.m
source/projects/s2m.wacom/MaxObject/: LMA_readme.txt  MaxObject.h  MaxObject.m  ReadMe.txt  maxobjectbridge.h  maxobjectbridge.m
source/projects/s2m.wacom/Wacom/: NSAppleEventDescriptorHelperCategory.h  NSAppleEventDescriptorHelperCategory.m  TabletAEDictionary.h  WacomTabletDriver.h  WacomTabletDriver.m
source/projects/slice_tilde/: slice_tilde.c
source/projects/vinylcontrol2_tilde/: timecoder.c  timecoder.h  vinylcontrol2_tilde.c
source/projects/vinylcontrol_tilde/: CMakeLists.txt  vinylcontrol_tilde.c
xxx/: listFiles.py  log.txt
xxx/fluidsynth-FAT/: GM.sf2
xxx/fluidsynth-FAT/fluidsynth~.mxo/Contents/: Info.plist
xxx/fluidsynth-FAT/fluidsynth~.mxo/Contents/MacOS/: fluidsynth~
